# eBFP

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  READMD.md  ebpf_program.c  signal.bpf.c  signal.cpp  signal.h  syscall_name_to_nr.gperf  syscall_name_to_nr.h  syscall_name_to_nr_test.cpp  waitable_map.hpp  waitable_map_test.cpp
.devcontainer/: Dockerfile  devcontainer.json
cmake/: FindBpfObject.cmake
tests/: CMakeLists.txt  coredump.cpp
